src/objects/OrderApi__Price_Rule_Variable__c.object
<CustomObject>
    <description>Create conditional Price Rules based on a field located on the Account or Contact object.</description>
    <fields>
        <fullName>OrderApi__Field__c</fullName>
        <description>**Required** The API Name of the Field used to evaluate for the Price Rule Variable.</description>
        <inlineHelpText>**Required** The API Name of the Field used to evaluate for the Price Rule Variable.</inlineHelpText>
        <label>Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Object__c</fullName>
        <description>**Required** The API Name of the Object evaluated for the Price Rule Variable.</description>
        <inlineHelpText>**Required** The API Name of the Object evaluated for the Price Rule Variable.</inlineHelpText>
        <label>Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Operator__c</fullName>
        <description>**Required** The operator in a filter is like the verb in a sentence. Use an operator to specify the conditions the Price Rule Variable will use to evaluate whether a Contact or Account matches the condition.</description>
        <inlineHelpText>**Required** The operator in a filter is like the verb in a sentence. Use an operator to specify the conditions the Price Rule Variable will use to evaluate whether a Contact or Account matches the condition.</inlineHelpText>
        <label>Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>equals</fullName>
                    <default>true</default>
                    <label>equals</label>
                </value>
                <value>
                    <fullName>not equal to</fullName>
                </value>
                <value>
                    <fullName>starts with</fullName>
                </value>
                <value>
                    <fullName>ends with</fullName>
                </value>
                <value>
                    <fullName>contains</fullName>
                </value>
                <value>
                    <fullName>does not contain</fullName>
                </value>
                <value>
                    <fullName>less than</fullName>
                </value>
                <value>
                    <fullName>greater than</fullName>
                </value>
                <value>
                    <fullName>less or equal</fullName>
                </value>
                <value>
                    <fullName>greater or equal</fullName>
                </value>
                <value>
                    <fullName>includes</fullName>
                </value>
                <value>
                    <fullName>excludes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OrderApi__Price_Rule__c</fullName>
        <description>**Required** Price Rule Variables hold a Master-Detail relationship to Price Rules.</description>
        <inlineHelpText>**Required** Price Rule Variables hold a Master-Detail relationship to Price Rules.</inlineHelpText>
        <label>Price Rule</label>
        <referenceTo>OrderApi__Price_Rule__c</referenceTo>
        <relationshipLabel>Price Rule Variables</relationshipLabel>
        <relationshipName>Price_Rule_Variables</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>OrderApi__Value__c</fullName>
        <description>**Required** The value of the Field to evaluate against the Customer to determine Price availability. (Used in conjunction with Type)</description>
        <inlineHelpText>**Required** The value of the Field to evaluate against the Customer to determine Price availability. (Used in conjunction with Type)</inlineHelpText>
        <label>Value</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Price Rule Variable</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Price Rule Variable ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Price Rule Variables</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>